# voiceflow

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  transcript.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  grammar.rs  injector.rs  main.rs  models.rs  recorder.rs  transcriber.rs
